set backface visibility to hidden to resolve search bar glitch

--- a/static/src/components/App/Search/Search.css
+++ b/static/src/components/App/Search/Search.css
@@ -53,6 +53,8 @@ form .input-group {
     position: fixed;
     top: 0;
     z-index: 1;
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
 }
 
 .jumbotron img {
